--- a/index.html
+++ b/index.html
@@ -427,6 +427,34 @@
         part1: 29,
         part2: 31,
       },
+      {
+        index: "250022",
+        name: "Nadushi Narthana",
+        paper: "Infinty Mid Examination - 2025",
+        part1: 24,
+        part2: 52,
+      },
+      {
+        index: "250023",
+        name: "Nethumli Nedara",
+        paper: "Infinty Mid Examination - 2025",
+        part1: 22,
+        part2: 53,
+      },
+      {
+        index: "250024",
+        name: "Okindu Wellalage",
+        paper: "Infinty Mid Examination - 2025",
+        part1: 17,
+        part2: 25,
+      },
+      {
+        index: "250025",
+        name: "Rumeth Siriwardana",
+        paper: "Infinty Mid Examination - 2025",
+        part1: 13,
+        part2: 14,
+      },
     ];
 
     function computeTotal(r) {
@@ -516,5 +544,6 @@
   </script>
 </body>
 </html>
+
 
 
