--- a/index.html
+++ b/index.html
@@ -455,6 +455,42 @@
         part1: 13,
         part2: 14,
       },
+      {
+        index: "250028",
+        name: "Aveesha Dinujaya",
+        paper: "Infinty Mid Examination - 2025",
+        part1: 19,
+        part2: 35,
+      },
+      {
+        index: "250029",
+        name: "Vihas Rathnayaka",
+        paper: "Infinty Mid Examination - 2025",
+        part1: 21,
+        part2: 40,
+      },
+      {
+        index: "250030",
+        name: "Savindu Induwara",
+        paper: "Infinty Mid Examination - 2025",
+        part1: 20,
+        part2: 41,
+      },
+      {
+        index: "250031",
+        name: "Bhashitha Nimsara",
+        paper: "Infinty Mid Examination - 2025",
+        part1:22 ,
+        part2:41 ,
+      },
+      {
+        index: "250032",
+        name: "Ranithu Geenuka",
+        paper: "Infinty Mid Examination - 2025",
+        part1: 31,
+        part2: 51,
+      },
+      
     ];
 
     function computeTotal(r) {
@@ -544,6 +580,7 @@
   </script>
 </body>
 </html>
+
 
 
 
